[tool.poetry]
name = "abc-dl"
version = "0.1.0"
description = "Archive ABC (Australian Broadcasting Corporation) News articles."
authors = ["king-millez <Millez.Dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
